<resources>

    <string name="app_name">Mobile Radio</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MobiRadio</string>
    <string name="title_activity_listen">Listen</string>
    <string name="button_listen">Listen</string>
    <string name="button_news">News</string>
    <string name="button_contests">Contests</string>
    <string name="button_settings">Settings</string>
    <string name="title_activity_news">News</string>
    <string name="title_activity_contests">Contests</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_signup">Create Account</string>
    <string name="contest_info">Welcome to the contests page - Please shake the phone to enter the contest! The results will be shown below:</string>
    <string name="contest_enter_button">ENTER CONTEST!</string>
    <string name="contest_results"></string>
    <string name="signup_info">Please fill out the appropriate information (more than 3 characters each):</string>
    <string name="settings_info">Edit the information you want to change:</string>
    <string name="user_name">Logout</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_startup">Startup</string>

</resources>