<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/contest_background"
    >
    
    
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/contest_info"
        android:textSize="20dp"
        android:gravity="center"
        tools:context=".Contests" />

    <Button
        android:id="@+id/enterContestButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/contest_enter_button" />

        <TextView
            android:id="@+id/contest_results"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/enterContestButton"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:text="@string/contest_results"
            android:textSize="20dp"
            tools:context=".Contests" />

</RelativeLayout>
